--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "link-stash",
   "scripts": {
-    "dev": "solid-start dev",
+    "dev": "vercel env pull && solid-start dev",
     "build": "solid-start build",
     "start": "solid-start start"
   },
@@ -22,6 +22,7 @@
     "solid-firebase": "^0.1.7",
     "solid-js": "^1.7.2",
     "solid-start": "^0.2.26",
+    "solid-start-vercel": "^0.2.26",
     "undici": "^5.15.1",
     "uuid": "^9.0.0"
   },
