--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
   "scripts": {
     "dev": "vercel env pull && solid-start dev",
     "build": "solid-start build",
-    "start": "solid-start start"
+    "start": "solid-start start",
+    "test": "vitest"
   },
   "type": "module",
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/uuid": "^9.0.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "solid-start-node": "^0.2.19",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
-    "vite": "^4.1.4"
+    "vite": "^4.1.4",
+    "vitest": "^0.29.8"
   },
   "dependencies": {
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.8.2",
+    "clsx": "^1.2.1",
+    "crypto-js": "^4.1.1",
     "firebase": "^9.19.1",
     "solid-firebase": "^0.1.7",
     "solid-js": "^1.7.2",
