--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "crypto-js": "^4.1.1",
     "firebase": "^9.19.1",
     "solid-firebase": "^0.1.7",
+    "solid-icons": "^1.0.4",
     "solid-js": "^1.7.2",
     "solid-start": "^0.2.26",
     "solid-start-vercel": "^0.2.26",
     "undici": "^5.15.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zod": "^3.21.4"
   },
   "engines": {
     "node": ">=16"
