And we're back in business!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
   "cSpell.words": [
     "ciphertext",
     "Firestore",
-    "Stache"
+    "Stache",
+    "upsert"
   ],
   "vitest.commandLine": "npx vitest",
 }
